--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 		<script type="text/javascript">
 			window.dhis2 = window.dhis2 || {};
 			dhis2.settings = dhis2.settings || {};
-			dhis2.settings.baseUrl = 'dhis2';
+			dhis2.settings.baseUrl = 'demo';
 		</script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/jQuery/jquery.min.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/jQuery/ui/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/jQuery/jquery.plugin.min.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/jQuery/jquery.min.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/jQuery/ui/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/jQuery/jquery.plugin.min.js"></script>
 
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/bootstrap/js/bootstrap.min.js"></script>     
-        <link type="text/css" rel="stylesheet"  href="/dhis2/dhis-web-commons/bootstrap/css/bootstrap.min.css">      
+        <script type="text/javascript" src="../../../dhis-web-commons/bootstrap/js/bootstrap.min.js"></script>     
+        <link type="text/css" rel="stylesheet"  href="../../../dhis-web-commons/bootstrap/css/bootstrap.min.css">
 
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular-resource.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular-route.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular-cookies.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular-sanitize.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/angular-animate.js"></script>  
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/ui-bootstrap.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.util.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/commons.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular-resource.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular-route.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular-cookies.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular-sanitize.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/angular-animate.js"></script>  
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/ui-bootstrap.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.util.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/commons.js"></script>
 
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/plugins/angularLocalStorage.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/angular/plugins/angular-translate.min.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.angular.services.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.angular.controllers.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/plugins/angularLocalStorage.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/angular/plugins/angular-translate.min.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.angular.services.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.angular.controllers.js"></script>
 
         <script type="text/javascript" src="scripts/app.js"></script>        
         <script type="text/javascript" src="scripts/services.js"></script>
@@ -42,13 +42,13 @@
         <script type="text/javascript" src="scripts/filters.js"></script>
 
         <!-- Menu scripts -->
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.translate.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.menu.js"></script>
-        <script type="text/javascript" src="/dhis2/dhis-web-commons/javascripts/dhis2/dhis2.menu.ui.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.translate.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.menu.js"></script>
+        <script type="text/javascript" src="../../../dhis-web-commons/javascripts/dhis2/dhis2.menu.ui.js"></script>
 
-        <link type="text/css" rel="stylesheet" href="/dhis2/dhis-web-commons/font-awesome/css/font-awesome.min.css"/>
-        <link type="text/css" rel="stylesheet" media="screen" href="/dhis2/dhis-web-commons/css/widgets.css"/>
-        <link type="text/css" rel="stylesheet" media="screen" href="/dhis2/dhis-web-commons/css/menu.css">
+        <link type="text/css" rel="stylesheet" href="../../../dhis-web-commons/font-awesome/css/font-awesome.min.css"/>
+        <link type="text/css" rel="stylesheet" media="screen" href="../../../dhis-web-commons/css/widgets.css"/>
+        <link type="text/css" rel="stylesheet" media="screen" href="../../../dhis-web-commons/css/menu.css">
 
         <link type="text/css" rel="stylesheet" href="assets/css/style.css">
         
